@@ -50,6 +50,8 @@ Version 1.5.1 -- CVS
   - Fixed date display bug for messages of today. Show short format in case
     of long format. (only occures in the timeframe around 0:00 AM till
     timezone).
+  - Added address book sorting options. Ascending/descending sorting code 
+    written by Bryan Loniewski 
 
 Version 1.5.0
 --------------------
